--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,47 @@ body {
     font-family: 'Helvetica', 'Arial', sans-serif;
     background: #0F0;
     color: #FF0;
+    animation: spin 4s linear infinite;
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
+}
+
+@-webkit-keyframes blink {
+    0%, 33% {
+	background: #0FF;
+    }
+    34%, 66% {
+	background: #F0F;
+    }
+    67%, 100% {
+	background: #FF0;
+    }
+}
+
+body:hover {
+    animation: aspin 4s linear infinite, blink 0.25s infinite;
+    -webkit-animation: aspin 4s linear infinite, blink 0.25s infinite;
+    -moz-animation: aspin 4s linear infinite, blink 0.25s infinite;
 }
 
 h1 {
+//    position: absolute;
     color: #F0F;
+    animation: spin 4s linear infinite;
+    -webkit-animation: spin 4s linear infinite;
+    -moz-animation: spin 4s linear infinite;
 }
 
 h1:hover {
+//    position: absolute;
     color: #0FF;
+    animation: aspin 4s linear infinite;
+    -webkit-animation: aspin 4s linear infinite;
+    -moz-animation: aspin 4s linear infinite;
 }
 
 img {
-    position: absolute;
+//    position: absolute;
     top: 20%;
     left: 30%;
     animation: spin 4s linear infinite;
@@ -23,3 +52,15 @@ img {
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform: rotate(360 deg); } }
+
+img:hover {
+//    position: absolute;
+    top: 20%;
+    left: 30%;
+    animation: aspin 4s linear infinite;
+    -webkit-animation: aspin 4s linear infinite;
+    -moz-animation: aspin 4s linear infinite;
+}
+@-moz-keyframes aspin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes aspin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes aspin { 100% { -webkit-transform: rotate(-360deg); transform: rotate(-360 deg); } }
