--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,18 @@
 body {
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    background: #0F0;
-    color: #FF0;
-    animation: spin 4s linear infinite;
-    -webkit-animation: spin 4s linear infinite;
-    -moz-animation: spin 4s linear infinite;
-}
-
-body:hover {
-    animation: aspin 4s linear infinite, blink 0.25s infinite;
-    -webkit-animation: aspin 4s linear infinite, blink 0.25s infinite;
-    -moz-animation: aspin 4s linear infinite, blink 0.25s infinite;
+    font-family: Helvetica, Arial, sans-serif;
+    position: relative;
+    margin: 0;
 }
 
 h1 {
-    color: #F0F;
-    animation: spin 4s linear infinite;
-    -webkit-animation: spin 4s linear infinite;
-    -moz-animation: spin 4s linear infinite;
+    font-size: 2.5em;
 }
 
-h1:hover {
-    color: #0FF;
-    animation: aspin 4s linear infinite;
-    -webkit-animation: aspin 4s linear infinite;
-    -moz-animation: aspin 4s linear infinite;
-}
-
-img {
-    top: 20%;
-    left: 30%;
-    animation: spin 4s linear infinite;
-    -webkit-animation: spin 4s linear infinite;
-    -moz-animation: spin 4s linear infinite;
-}
-
-img:hover {
-    top: 20%;
-    left: 30%;
-    animation: aspin 4s linear infinite;
-    -webkit-animation: aspin 4s linear infinite;
-    -moz-animation: aspin 4s linear infinite;
-}
-
-@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform: rotate(360 deg); } }
-@-moz-keyframes aspin { 100% { -moz-transform: rotate(-360deg); } }
-@-webkit-keyframes aspin { 100% { -webkit-transform: rotate(-360deg); } }
-@keyframes aspin { 100% { -webkit-transform: rotate(-360deg); transform: rotate(-360 deg); } }
-@-webkit-keyframes blink {
-    0%, 33% {
-	background: #0FF;
-    }
-    34%, 66% {
-	background: #F0F;
-    }
-    67%, 100% {
-	background: #FF0;
-    }
+.topBar {
+    height: 40vh;
+    width: 100%;
+    padding: 10px 10px;
+    margin: 0;
+    background-image: url("rsc/hero.jpg");
+    background-size: cover;
 }
