--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,14 @@ body {
     background-size: cover;
 }
 
-h1, h2 {
+h1 {
     font-family: 'Raleway', sans-serif;
     font-size: 2.5em;
+}
+
+h2 {
+    font-family: 'Raleway', sans-serif;
+    font-size: 2em;
 }
 
 a {
